kubernetes/hello-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-deployment
  namespace: hello
  labels:
    app: hello
spec:
    replicas: 3
    selector:
      matchLabels:
        app: hello
    template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
      - name: hello
        image: docker.pkg.github.com/jltio/hello/hello:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
        imagePullSecrets:
        - name: regcred
