kubernetes/hello-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: hello-service
  namespace: hello
  labels:
    app: hello
spec:
    selector:
      app: hello
    type: NodePort
    ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
