kubernetes/deploy-hello.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-deployment
  namespace: default
  labels:
    app: hello
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
      - name: hello
        image: docker.pkg.github.com/jthiry50/hello/hello:latest
        ports:
        - containerPort: 8080
      imagePullSecrets:
      - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: hello-service
spec:
  selector:
    app: hello
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hello-ingress
spec:
  rules:
  - host: hello.cluster.local
    http:
      paths:
      - backend:
        serviceName: hello-service
        servicePort: 80
