kubernetes/hello-ingress.yml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hello-ingress
  namespace: hello
spec:
  rules:
  - host: hello.cluster.local
    http:
      paths:
      - backend:
          serviceName: hello-service
          servicePort: 8080
  - host: hello2.cluster.local
    http:
      paths:
      - backend:
          serviceName: hello-service
          servicePort: 8080
